[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.14"
openapiv3 = "1.0.2"
openapiv3_codegen = "0.2"
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.8"